refactor and implemented swagger
